--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,12 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/BOSEconomy.jar"/>
-	<classpathentry kind="lib" path="lib/bukkit-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/Essentials.jar"/>
 	<classpathentry kind="lib" path="lib/iConomy v4.jar"/>
 	<classpathentry kind="lib" path="lib/iConomy v5.jar"/>
 	<classpathentry kind="lib" path="lib/iConomy v6.jar"/>
 	<classpathentry kind="lib" path="lib/MultiCurrency.jar"/>
+	<classpathentry kind="lib" path="X:/lib/spigot-1.9.2.jar"/>
+	<classpathentry kind="lib" path="X:/lib/vault.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
